# MailClient-IMAP4-POP3-and-SMTP-

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
sources/MailClientCore/: CMakeLists.txt
sources/MailClientCore/app/: MailClientCore.cpp  MailClientCore.h  RushPriority.cpp  RushPriority.h  main.cpp
sources/MailClientUI/: CMakeLists.txt
sources/MailClientUI/app/: MailClientOperations.h  MailClientUI.cpp  MailClientUI.h  main.cpp
sources/MailClientUI/gui/: About.cpp  About.h  AddressBookWindow.cpp  ContactsView.cpp  DirectoryView.cpp  DirectoryView.h  HorizontalLine.h  MailBoxView.h  MainWindow.cpp  MainWindow.h  RichDataList.cpp  ThemeHandler.cpp  VerticalLine.h
sources/MailClientUI/resources/: Resources.qrc
sources/app/: ContactOperations.h  MailClient.cpp  MailClient.h  MailClientOperations.h  MailClientUI.cpp  MailClientUI.h  Test.txt  main.cpp
sources/data/: Contact.h  ContactDatabase.cpp  ContactDatabase.h  MailDatabase.cpp  MailDatabase.h  MailStorage.cpp  MailStorage.h  Profile.h  SecurityType.h
sources/gui/: About.h  ActionBuilder.cpp  ActionBuilder.h  AddressBookWindow.cpp  AddressBookWindow.h  Calender.cpp  Calender.h  ContactDetails.cpp  ContactDetails.h  ContactsView.cpp  ContactsView.h  DirectoryView.cpp  DirectoryView.h  Files.cpp  Files.h  MailBoxView.cpp  MailBoxView.h  MailClient.cpp  MailClient.h  MailClientOperations.h  MailComposer.cpp  MailComposer.h  MailView.cpp  MailView.h  MainWindow.cpp  MainWindow.h  ProfileView.cpp  ProfileView.h  RichDataList.cpp  RichDataList.h  SettingsView.cpp  SettingsView.h  Tasks.cpp  Tasks.h  main.cpp
sources/network/: ImapClient.cpp  ImapClient.h  Mail.cpp  Mail.h  Network.cpp  Network.h  SecurityType.h  SmtpClient.cpp  SmtpClient.h  TcpClient.cpp  TcpClient.h
sources/qtextrawidgets/: ActiveLabel.cpp  ActiveLabel.h  Button.cpp  Button.h  CentralWidget.cpp  CentralWidget.h  DataList.cpp  DataList.h  HorizontalLine.cpp  IndicatorBar.cpp  IndicatorBar.h  IndicatorCircular.cpp  IndicatorCircular.h  PictureBox.cpp  PictureBox.h  RichDataList.h  RichLabel.cpp  RichLabel.h  ThemeHandler.h  VerticalLine.cpp
sources/resources/: Resources.qrc
sources/utils/: Base64.cpp  Base64.h  CommQueue.cpp  CommQueue.h  Configuration.cpp  Configuration.h  DateTime.cpp  DateTime.h  Directory.cpp  Directory.h  Logger.cpp  Logger.h  SignalHandler.cpp  SignalHandler.h  StringEx.cpp  StringEx.h  Timestamp.cpp  Timestamp.h  mqueue.h
temp/: AddressBookService.cpp  AddressBookService.h  CMakeLists.txt  main.cpp_
temp/resources/: Resources.qrc
temp/sources/: AddressBook.cpp  AddressBook.h  ContactDetails.cpp  ContactDetails.h  ContactOperations.h  MainWindow.cpp  MainWindow.h  main.cpp
